fixed jump to top

--- a/src/components/container/footer/Footer.scss
+++ b/src/components/container/footer/Footer.scss
@@ -16,4 +16,5 @@ body {
   position: fixed;
   bottom: 1em;
   right: 1em;
+  color: rgb(183, 32, 46);
 }
